2005-05-15 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Rewrite GNUmakefile and some headers to make correct installation.
	* Adapt new directory structure.
	* Source/Search/TestNot.m:
	* Source/Search/TestBooleanScorer.m: 
	* Source/Search/TestBooleanOr.m: ported.
	* Current test result: 
	Result: 36 classes, 84 methods, 352033 tests, 0 failed

2005-05-14 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Search/TestTermVectors.m: 
	* Source/Search/TestEnglish.h:
	* Source/Search/TestEnglish.m: ported.
	* Current test result: 
	  Result: 33 classes, 77 methods, 352023 tests, 0 failed

2005-05-13 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Search/TestBooleanQuery.m: ported.
	* Source/Search/TestDocBoost.m: ported.

2005-05-11 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Search/TestSetNorm.m: ported.

2005-05-09 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Test units work again.
	* Current test result: 
	Result: 28 classes, 68 methods, 351511 tests, 0 failed
	* Re-ident source code.
	* Source/Search/TestSimilarity.m: Test unit for LCSimilarity.

2005-05-07 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Fix memory leak (in progress).

2005-05-05 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Fix warning for GCC 4.
	* Test is broken in GCC 4 due to memory leak.

2005-05-04 Quentin Mathe <qmathe@club-internet.fr>

	* Source/Analysis/LCSimpleAnalyser.m:
	* Source/Index/LCDocumentWriter.m:
	* Source/Index/LCSegmentReader.m:
	* Source/Index/TestSegmentMerger.m:
	* Source/Index/TestTermVectorsWriter.m:
	Fixed case mismatches which prevented compilation on case sensitive system 
	(patch provided by Rob Burns).

2005-04-29 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Header/Search/LCHit.h:
	* Source/Search/LCHit.m: 
	* Header/Search/LCHitIterator.h:
	* Source/Search/LCHitIterator.m: ported.

2005-04-27 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Header/Search/LCBooleanScorers.h: removed.
	* Header/Search/LCTermQuery.h:
	* Source/Search/LCTermQuery.m: 