@@ -1,0 +1,62 @@
+#ifndef __LuceneKit_Search__
+#define __LuceneKit_Search__
+
+#include <LuceneKit/Search/LCBooleanClause.h>
+#include <LuceneKit/Search/LCBooleanQuery.h>
+#include <LuceneKit/Search/LCBooleanScorer.h>
+#include <LuceneKit/Search/LCCachingWrapperFilter.h>
+#include <LuceneKit/Search/LCConjunctionScorer.h>
+#include <LuceneKit/Search/LCDateFilter.h>
+#include <LuceneKit/Search/LCDefaultSimilarity.h>
+#include <LuceneKit/Search/LCDisjunctionSumScorer.h>
+#include <LuceneKit/Search/LCExactPhraseScorer.h>
+#include <LuceneKit/Search/LCExplanation.h>
+#include <LuceneKit/Search/LCFieldCache.h>
+#include <LuceneKit/Search/LCFieldCacheImpl.h>
+#include <LuceneKit/Search/LCFieldDoc.h>
+#include <LuceneKit/Search/LCFieldDocSortedHitQueue.h>
+#include <LuceneKit/Search/LCFieldSortedHitQueue.h>
+#include <LuceneKit/Search/LCFilter.h>
+#include <LuceneKit/Search/LCFilteredQuery.h>
+#include <LuceneKit/Search/LCFilteredTermEnum.h>
+#include <LuceneKit/Search/LCFuzzyQuery.h>
+#include <LuceneKit/Search/LCFuzzyTermEnum.h>
+#include <LuceneKit/Search/LCHit.h>
+#include <LuceneKit/Search/LCHitCollector.h>
+#include <LuceneKit/Search/LCHitIterator.h>
+#include <LuceneKit/Search/LCHitQueue.h>
+#include <LuceneKit/Search/LCHits.h>
+#include <LuceneKit/Search/LCIndexSearcher.h>
+#include <LuceneKit/Search/LCMultiPhraseQuery.h>
+#include <LuceneKit/Search/LCMultiSearcher.h>
+#include <LuceneKit/Search/LCMultiTermQuery.h>
+#include <LuceneKit/Search/LCNonMatchingScorer.h>
+#include <LuceneKit/Search/LCPhrasePositions.h>
+#include <LuceneKit/Search/LCPhrasePrefixQuery.h>
+#include <LuceneKit/Search/LCPhraseQuery.h>
+#include <LuceneKit/Search/LCPhraseQueue.h>
+#include <LuceneKit/Search/LCPhraseScorer.h>
+#include <LuceneKit/Search/LCQuery.h>
+#include <LuceneKit/Search/LCQueryFilter.h>
+#include <LuceneKit/Search/LCQueryTermVector.h>
+#include <LuceneKit/Search/LCRangeFilter.h>
+#include <LuceneKit/Search/LCReqExclScorer.h>
+#include <LuceneKit/Search/LCReqOptSumScorer.h>
+#include <LuceneKit/Search/LCScoreDoc.h>
+#include <LuceneKit/Search/LCScoreDocComparator.h>
+#include <LuceneKit/Search/LCScorer.h>
+#include <LuceneKit/Search/LCSearchable.h>
+#include <LuceneKit/Search/LCSearcher.h>
+#include <LuceneKit/Search/LCSimilarity.h>
+#include <LuceneKit/Search/LCSimilarityDelegator.h>
+#include <LuceneKit/Search/LCSort.h>
+#include <LuceneKit/Search/LCSortComparator.h>
+#include <LuceneKit/Search/LCSortComparatorSource.h>
+#include <LuceneKit/Search/LCSortField.h>
+#include <LuceneKit/Search/LCTermQuery.h>
+#include <LuceneKit/Search/LCTermScorer.h>
+#include <LuceneKit/Search/LCTopDocs.h>
+#include <LuceneKit/Search/LCTopFieldDocs.h>
+#include <LuceneKit/Search/LCWeight.h>
+
+#endif /* __LuceneKit_Search__ */
